[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/Level.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 639, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 358 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.458824, 0.54902, 0.584314, 1 )

[node name="OpponentScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
align = 1
valign = 1

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 360 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1230, 360 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="WallTop" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 740 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="LimitLeft" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitLeft"]
position = Vector2( -10, 360 )
shape = SubResource( 2 )

[node name="LimitRight" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitRight"]
position = Vector2( 1290, 360 )
shape = SubResource( 2 )

[connection signal="body_entered" from="LimitLeft" to="." method="_on_LimitLeft_body_entered"]
[connection signal="body_entered" from="LimitRight" to="." method="_on_LimitRight_body_entered"]
